--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
-* { 
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 canvas {
-     display: block;
+  display: flex;
+  top: 0;
+  position: fixed;
+  pointer-events: none;
 }
 #container {
-    width: 100vw;
-    height: 100vh;
-    
+  width: 100vw;
+  height: 100vh;
 }
 
 *,
@@ -110,6 +112,11 @@ a:focus-visible {
   outline: 2px solid red;
   background: transparent;
 }
+.content__title a {
+  font-size: 1rem;
+  position: absolute;
+  bottom: 0;
+}
 
 .unbutton {
   background: none;
@@ -138,9 +145,9 @@ a:focus-visible {
   grid-template-areas:
     "site year menu"
     "tagline tagline tagline"
-    "contact content content"
-    "works content content"
-    "works content content"
+    "content content works"
+    "content content works"
+    "content content contact"
     "title title title"
     "links links links";
 }
@@ -408,7 +415,7 @@ a:focus-visible {
   height: 100%;
 } */
 
-@media screen and (min-width: 53em) {
+/* @media screen and (min-width: 53em) {
   body {
     --page-padding: 2.5rem;
   }
@@ -440,4 +447,58 @@ a:focus-visible {
   .frame__title-main {
     grid-area: 5 / 3 / 2 / 6;
   }
+} */
+
+/* //works-about-header */
+
+.work-about {
+  height: auto;
+}
+.work-about-header {
+  position: fixed;
+  z-index: 200;
+  padding: var(--page-padding);
+  justify-content: space-between;
+  align-items: center;
+  display: flex;
+  width: 100%;
+}
+.work-about-main {
+  width: 100%;
+  height: auto;
+  position: absolute;
+  z-index: 199;
+  margin-top: 10rem;
+  padding: var(--page-padding);
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+.work-about-main h2 {
+  width: 100%;
+  border-bottom: #ffffff 1px solid;
+  padding-bottom: 1rem;
+}
+.work-about-main p {
+  margin-top: 1rem;
+}
+
+#back {
+  margin-bottom: 4rem;
+}
+.work-about-main img {
+  margin-top: 1rem;
+  width: 100%;
+  height: auto;
+}
+
+.work-about-footer {
+  z-index: 1000;
+  padding: var(--page-padding);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
 }
