--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ canvas {
   top: 0;
   position: fixed;
   pointer-events: none;
+  filter: brightness(0.2);
 }
 #container {
   width: 100vw;
@@ -21,7 +22,7 @@ canvas {
 
 :root {
   font-size: 12.5px;
-  --color-text: #777674;
+  --color-text: #ffffff;
   --color-bg: #000;
   --color-link: #777674;
   --color-link-hover: #f4d88c;
