<body>タグにクラスを追加し、スタイルシートにoverflow-yプロパティを追加

--- a/style.css
+++ b/style.css
@@ -43,6 +43,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.top-body {
+  overflow-y: hidden;
+}
 
 /* Page Loader */
 .js .loading::before,
