--- a/style.css
+++ b/style.css
@@ -148,11 +148,11 @@ a:focus-visible {
   grid-template-columns: auto auto auto;
   grid-template-areas:
     "site year menu"
-    "tagline tagline tagline"
+    "content content works"
     "content content works"
     "content content works"
     "content content contact"
-    "title title title"
+    "content content contact"
     "links links links";
 }
 
@@ -332,6 +332,14 @@ a:focus-visible {
   background-position: 50% 0%;
   width: 100%;
   height: 100%;
+}
+
+.frame__menu,
+.frame__works,
+.frame__contact,
+.frame__title,
+.frame__links {
+  justify-self: end;
 }
 
 .pos-1 {
